syntax = "proto3";

option java_package = "com.grpc.service.client";

service UserClient {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc logout(LogoutRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string responseMessage = 1;
  int32 responseCode = 2;
}

message LogoutRequest {
}